@@ -1,11 +1,11 @@
 /*
  * Copyright 2015-2025 the original author or authors.
- * 
+ *
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
  * in compliance with the License. You may obtain a copy of the License at
- * 
+ *
  * http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software distributed under the License
  * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
  * or implied. See the License for the specific language governing permissions and limitations under
@@ -30,14 +30,14 @@ package sockslib.common.methods;
  */
 public abstract class AbstractSocksMethod implements SocksMethod {
 
-  @Override
-  public int hashCode() {
-    return new Integer(getByte()).hashCode();
-  }
+    @Override
+    public int hashCode() {
+        return Integer.valueOf(getByte()).hashCode();
+    }
 
-  @Override
-  public boolean equals(Object obj) {
-    return obj instanceof SocksMethod && ((SocksMethod) obj).getByte() == this.getByte();
-  }
+    @Override
+    public boolean equals(Object obj) {
+        return obj instanceof SocksMethod && ((SocksMethod) obj).getByte() == this.getByte();
+    }
 
 }
